# SkysyncR

./: .gitignore  CODE_OF_CONDUCT.md  SECURITY.md
backend/: Cargo.toml  README.md  config.yaml
backend/.sqlx/: query-1148d94f1ca7e5adb228dca85ebeb9fb55dcf0d5801f26cc41a31d853af41988.json  query-27bff8dcda488094f64ea8fd55dbe9baba2322e2f409ed015173fb0813a616d5.json  query-44d5f4af07fe9357b6441254f0413b04f62718bea60703642aa2dea052fa4811.json  query-498c9a22e7a55a250a85755f14b95a67b2c8d2ea01e0230d4ff2c8f774906b44.json  query-5e56a811ed0ec84050f4efee0a28fe776001dcc5c5631553226fae114db45652.json  query-6168a8401f2470c3f0dc9cda4d8040ec16964981c89def65d6357f0e2ab7daaa.json  query-6a4be69229c9d5346c443fb26c32610f287b99b5ff64e7c15877563449c0dbaf.json  query-7484e8ee153f2aed449c43b01e656d353b51c85828448c478dc29d10c0dd1455.json  query-84bef0244b7d25a9e2cbb45fcea6bf45428139beb9210b7523dd72a76a25d472.json  query-8572dd1cd2015e8b32261088d8aa9bcb0a16bdd30bbd2999ee14f061a9a22381.json  query-aa9e5dca0b9f4cab87dfda02bb5e9eb7d68397c1389da5675e1710c67d7808a2.json  query-bd08d41f72708b85be433cd4723ba7bfa98c7e9bb1c729453673c47df9000b8d.json  query-d384dd69fa30b151d4162f9e4cac5e44593163854ec6cdca470e2dfc228a21c6.json  query-df28cc4001654852403e383b2280fc7d31ad1dd3f99eb3a2d2ae3393570f8f3b.json  query-f79b11b6c6b4b4e5dfe6683e25e1217b744e689e33000ce91235d9ec7954ed8c.json
backend/migrations/: 20260717000100_baseline_schema.sql  20260717000200_add_user_verification_expiry.sql  20260717000300_add_refresh_token_session_expiry.sql  20260717000400_remove_refresh_token_device_metadata.sql  20260717000500_remove_audit_log_ip_address.sql  20260717000600_add_file_note_and_share_limits.sql  20260717000700_add_user_trash_retention.sql  20260717000800_add_user_settings_columns.sql  20260717000900_add_folder_encryption_and_sharing_metadata.sql  20260717001000_add_group_roles.sql  20260717001100_add_group_lookup_indexes.sql  20260717001200_add_calendar_entries.sql  20260717001300_add_favorites.sql  20260717001400_migrate_file_shares_schema.sql  20260717001500_add_recovery_private_key_blob.sql  20260717001600_add_folder_favorites.sql  20260718000100_add_ransomware_resilience.sql  20260721000100_align_group_member_roles.sql  20260722000100_add_folder_private_shares.sql
backend/src/: app.rs  auth.rs  lib.rs  main.rs  observability.rs  state.rs
backend/src/crypto/: aes.rs  email.rs  jwt.rs  mod.rs  refresh_token.rs  rsa.rs
backend/src/db/: calendar.rs  file_records.rs  file_share_schema.rs  files.rs  folders.rs  groups.rs  migrations.rs  mod.rs  notifications.rs  refresh_tokens.rs  storage.rs  tags.rs  users.rs
backend/src/handlers/: auth.rs  calendar.rs  files.rs  (+8 more)
backend/tests/: integration.rs
(+264 files in other folders)
