[package]
name = "SkysyncR"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.3" , features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "chrono", "ipnetwork"]}
uuid = {version = "1.23.4", features = ["serde", "v4"]}
bcrypt = "0.19.2"
tower-http = {version = "0.7.0", features = ["cors", "set-header"]}
tower_governor = "0.8.0"
chrono = { version = "0.4.45" , features = ["serde"]}
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1"] }
rand = "0.8.6"
hickory-resolver = "0.26.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
